--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 /MyProjectJavaWeb/nbproject/private/
+/MyProjectJavaWeb/build/
+/DemoStudentJw/nbproject/private/
+/DemoStudentJw/build/
+/DemoStudentJw/dist/
